--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -52,12 +54,16 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor"
 
     // by viewModels
-    implementation "androidx.activity:activity-ktx:$activity_version"
-    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    implementation "androidx.activity:activity-ktx:$activityVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
 
     // ViewModelScope
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModelScopeVersion"
 
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataVersion"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
 }
