feat : 통신을 통해 받은 데이터를 View 에 바인딩 작업 진행
- 라이브 데이터를 활용하여 데이터가 들어오면 View에 바인딩되도록 구현
- RecyclerView와 ViewPager2 를 중첩시켜 자연스런 스크롤 구현
- BindingAdapter를 활용하여 요구 사항에 맞게 각각 타입에 따른 데이터를 RecyclerView 에 바인딩
- Glide 를 활용하여 이미지 로드

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ ext {
     activityVersion = "1.5.0"
     fragmentVersion = "1.5.0"
     hiltVersion = "2.40"
+    glideVersion = "4.12.0"
 }
 
 task clean(type: Delete) {
